--- a/_config.yml
+++ b/_config.yml
@@ -4,4 +4,4 @@ permalink: /blog/:year/:month/:day/:title
 collections:
   designmockups:
     output: true
-	permalink: /designs/:title/
+    permalink: /designs/:title
