--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 name: Bradley Campbell, Web Developer
+description: Website of Bradley Campbell.  Front end developer based in Wellington, New Zealand.
 markdown: kramdown
 url: http://www.redknightnz81.com
 baseurl: /
