--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 name: Bradley Campbell, Web Developer
 description: Website of Bradley Campbell.  Front end developer based in Wellington, New Zealand.
+title: Portfolio website of Bradley Campbell, front end web developer based in Wellington, New Zealand.
 markdown: kramdown
 url: http://www.redknightnz81.com
 baseurl: /
